[gd_scene load_steps=2 format=3 uid="uid://c2q3r4s5t6u7v8w9"]

[ext_resource type="Script" path="res://addons/juno_leaderboard/dock_ui/juno_dock.gd" id="1"]

[node name="JunoDock" type="VBoxContainer"]
offset_right = 300.0
offset_bottom = 600.0
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Juno Leaderboard"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ConfigLabel" type="Label" parent="."]
layout_mode = 2
text = "Configuration"

[node name="SatelliteIdLabel" type="Label" parent="."]
layout_mode = 2
text = "Satellite ID:"

[node name="SatelliteIdInput" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter your Juno satellite ID"

[node name="CollectionNameLabel" type="Label" parent="."]
layout_mode = 2
text = "Collection Name:"

[node name="CollectionNameInput" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "highscores"
placeholder_text = "Collection name"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="ActionsLabel" type="Label" parent="."]
layout_mode = 2
text = "Actions"

[node name="OpenConsoleButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Open Juno Console"

[node name="TestConnectionButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Test Connection"

[node name="InsertTestButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Insert Test Score"

[node name="FetchLeaderboardButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Fetch & Display Leaderboard"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Status: Ready"

[node name="HSeparator4" type="HSeparator" parent="."]
layout_mode = 2

[node name="LeaderboardLabel" type="Label" parent="."]
layout_mode = 2
text = "Leaderboard Preview"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="LeaderboardList" type="ItemList" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
